# rocMLIR

./: .gitignore  .gitmodules  CMakeLists.txt  MIOpen_tuned_wrw_vs_original_tuned.html  README.md  block_wide.mlir  blockwise_wrong.mlir  codecov.yml  conv_op.mlir  crash.mlir  group_test.mlir  group_verify.mlir  lower_res.mlir  lowering_xdlops_gemm_v2.mlir  mfma_v2.mlir  patch.diff  prototype_thread.mlir  prototype_thread_wide.mlir  raw_buffer.mlir  readme.txt  rebuild.sh  rocdl_wrong.mlir  step3.mlir  step4.mlir  thread.mlir  thread_wrong.mlir  thread_wrong2.mlir  thread_wrong_original.mlir  threadwise_copy_test.mlir  xdlops_gemm_test.mlir  xdlops_gemm_test2.mlir  xdlops_gemm_v2.mlir
mlir/: CMakeLists.txt  README.md
mlir-patch/tools/mlir-rocm-runner/: CMakeLists.txt  mlir-rocm-runner.cpp
mlir/docs/MIOpen/: tensor_layout.md
mlir/docs/Rock/: tensor_layout.md
mlir/docs/fnuz-float-software-truncation-sources/: f8-2a-test.cpp  f8-2d.cpp  f8-2d.ll  f8-2d.mlir  fp8-trunc-O3.ll  fp8-trunc-cleaned.cpp  fp8-trunc-e4m3.ll  fp8-trunc-e5m2.ll
mlir/examples/: CMakeLists.txt
mlir/examples/prototypes/: blah.mlir  blah2.mlir  blah3.mlir  conv2d.mlir  lower_index_diff.mlir  lower_index_diff_2.mlir  memref_addrspace_test.mlir  prototype_threadwise_copy.mlir  scf_if_v0.mlir  scf_if_v1.mlir  stage2.mlir  stage3-hacked-a.mlir  stage3-hacked-b.mlir  stage3-hacked-check-lds-a.mlir  stage3-hacked-check-lds.mlir  stage3-hacked-check-vgpr.mlir  stage3-hacked-to-work.mlir  stage3-hacked.mlir  stage3.mlir  step2_try_use_vector_for_blockwise_copy_coords.mlir  test_alloc.mlir  test_gpu.mlir  test_index.mlir  test_rocdl.mlir  test_vector.mlir  test_vector_matmul.mlir  test_vector_reshape.mlir  test_vector_transfer_loop.mlir  test_xdlops_v2.mlir  threadwise_gemm.mlir  toy_threadwise_copy_filter_tensor.mlir  toy_threadwise_copy_input_tensor.mlir  xdlops.mlir
mlir/include/mlir/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h  InitAllTranslations.h  InitMIOpenDialects.h  InitMIOpenPasses.h  InitMIOpenTranslations.h  InitRocMLIRCLOptions.h  InitRocMLIRDialects.h  InitRocMLIRPasses.h  InitRocMLIRTarget.h  InitRocMLIRTranslations.h  InitRockDialects.h  InitRockPasses.h  InitRockTranslations.h
mlir/include/mlir-c/: RegisterRocMLIR.h
mlir/lib/: CMakeLists.txt
mlir/lib/Analysis/: BufferDependencyAnalysis.cpp  CMakeLists.txt
mlir/lib/CAPI/: CMakeLists.txt
mlir/lib/Conversion/: CMakeLists.txt  PassDetail.h
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/ExecutionEngine/: CMakeLists.txt  JitRunner.cpp  RunnerUtils.cpp  conv-validation-wrappers.cpp
mlir/lib/IR/: MLIRContext.cpp  Types.cpp
mlir/lib/RocmlirTransforms/: CMakeLists.txt  CompileGpuWithComgr.cpp
mlir/lib/Transforms/: CMakeLists.txt
mlir/lib/Translation/: CMakeLists.txt
mlir/navi-test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/navi-test/conv2d_harness/: conv2d_harness.mlir  conv2d_harness_cyxk_chwn_khwn.mlir
mlir/navi-test/cpu_conv2d/: kcyx_nchw_nkhw_bwd_weight.mlir  kcyx_nchw_nkhw_fwd.mlir  kyxc_nhwc_nhwk_bwd_data_cpp.mlir
mlir/navi-test/e2e/: PaddedGemmConfig.toml  Resnet50Config.toml  generateE2ETest.py  lit.cfg.py  lit.site.cfg.py.in
mlir/python/: CMakeLists.txt  rocMLIRModule.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  mlir-miopen-e2e-validate.sh.in  pr_attention_f16_8.mlir  pr_attention_f32_2.mlir  run-conv-integration-test.sh.in
mlir/test/CAPI/: CMakeLists.txt  ir.c  lit.local.cfg  mixr_cobj.cc  mixr_cobj.cpp  mixr_full.c  mixr_split_k.cpp  mixrir.c  tosa_miir.cc  tosa_miir.cpp
mlir/test/Unit/: lit.cfg.py  lit.site.cfg.py.in
mlir/test/auto_e2e/: CMakeLists.txt  conv2d_host_validation.mlir  conv2d_host_validation_f16.mlir  conv2d_host_validation_f16_bwd.mlir  conv2d_host_validation_f16_fwd.mlir  conv2d_host_validation_f32_bwd.mlir  conv2d_host_validation_f32_fwd.mlir  lit.cfg.py  lit.site.cfg.py.in
mlir/test/common_utils/: CMakeLists.txt  common.py
mlir/test/e2e/: CMakeLists.txt  GemmVariants.toml  LargeGemm.toml  MixedConvLayouts.toml  PaddedGemmConfig.toml  PrAttention.toml  PrAttentionF16.toml  PrAttentionF32.toml  PrAttentionI8.toml  PrGemm.toml  PrGemmSplitK.cfg  PrGemmSplitK.toml  PrResnet50.toml  Resnet101Config.toml  Resnet50Config.toml  Resnext101Config.toml  conv2d_host_validation_bwd.toml  conv2d_host_validation_f16_bwd.toml  conv2d_host_validation_f16_fwd.toml  conv2d_host_validation_f32_bwd.toml  conv2d_host_validation_f32_fwd.toml  conv2d_host_validation_fwd.toml  conv2d_regression_bwd.toml  conv2d_regression_fwd.toml  conv2d_regression_fwd_navi3x.toml  conv2d_regression_fwd_nonNavi3x.toml  conv2d_wrw_perf_config.cfg  conv2d_wrw_perf_config.toml  conv_regression_bwd.toml  conv_regression_fwd.toml  conv_regression_fwd_navi3x.cfg  conv_regression_fwd_navi3x.toml  conv_regression_fwd_nonNavi3x.cfg  conv_regression_fwd_nonNavi3x.toml  conv_wrw_perf_config.cfg  conv_wrw_perf_config.toml  gemm_split_k.cfg  gemm_split_k.toml  gemm_split_k_f16.cfg  gemm_split_k_f16.toml  (+8 more)
mlir/test/fusion/: CMakeLists.txt  bug-1520-input-fusion-regression.mlir  bug-1546-compile-failure.mlir  bug-1550-reduction-fusion-compile-failure.mlir  fusability-conv.mlir  fusability-dot.mlir  input-fusion-regularize-generic-chain.mlir  input-fusion-regularize.mlir  input-output-fusion-regularize.mlir  linalg-generic-biased-inputs.mlir  linalg-generic-const-initializer.mlir  linalg-generic-const-initilizer.mlir  linalg-generic-irregular.mlir  linalg-generic-multi-output.mlir  linalg-generic-reduction-fail.mlir  linalg-generic-reduction.mlir  linalg-generic-reuse-buffers.mlir  linalg-generic-sigmoid-elementwise-block.mlir  linalg-generic-threadwise-read-into.mlir  linalg-generic-with-atomic-store.mlir  miopen-bcast-exp.e2e.mlir  miopen-bcast.mlir  (+38 more)
mlir/tools/: CMakeLists.txt
mlir/unittests/: CMakeLists.txt
mlir/utils/: CMakeLists.txt  Resnet50Config.toml  Resnext101Config.toml  generateE2ETest.py  generateInWarpTransposeTest.py  get_test_metadata.py  inapplicable_2022_04_28.txt  miopenParameterSweeps.py  mlirParameterSweeps.py  test-coverage-investigation.ipynb  test_metadata_2022_04_28.pickle
(+1898 files in other folders)
