#add_subdirectory(mlir-cuda-runner)
#add_subdirectory(mlir-cpu-runner)
add_subdirectory(rock-lsp-server)
add_subdirectory(rock-opt)
add_subdirectory(rock-gen)
#add_subdirectory(mlir-reduce)
add_subdirectory(mlir-rocm-runner)
#add_subdirectory(mlir-shlib)
#add_subdirectory(mlir-spirv-cpu-runner)
add_subdirectory(rock-translate)
#add_subdirectory(mlir-vulkan-runner)
add_subdirectory(xmir-runner)

# Rock dialect specific.
add_subdirectory(mlir-rock-driver)
add_subdirectory(mlir-rock-lib)
